@@ -22,14 +22,14 @@ package org.neo4j.gds.applications.graphstorecatalog;
 import org.apache.commons.lang3.tuple.Pair;
 import org.neo4j.gds.api.GraphName;
 import org.neo4j.gds.api.User;
+import org.neo4j.gds.core.loading.GraphStoreCatalogEntry;
 import org.neo4j.gds.core.loading.GraphStoreCatalogService;
-import org.neo4j.gds.core.loading.GraphStoreWithConfig;
 import org.neo4j.gds.termination.TerminationFlag;
 
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.function.Predicate;
 
 public final class ListGraphApplication {
     private final GraphListingService graphListingService;
@@ -49,20 +49,20 @@ public final class ListGraphApplication {
         return new ListGraphApplication(graphListingService, degreeDistributionApplier);
     }
 
-    public List<Pair<GraphStoreWithConfig, Map<String, Object>>> list(
+    public List<Pair<GraphStoreCatalogEntry, Map<String, Object>>> list(
         User user,
         Optional<GraphName> graphName,
         boolean includeDegreeDistribution,
         TerminationFlag terminationFlag
     ) {
-        var graphEntries = graphListingService.listGraphs(user);
-
-        if (graphName.isPresent()) {
-            // we should only list the provided graph
-            graphEntries = graphEntries.stream()
-                .filter(e -> e.getKey().graphName().equals(graphName.get().getValue()))
-                .collect(Collectors.toList());
-        }
+        Predicate<String> graphNameFilter = graphName
+            .map(GraphName::getValue)
+            .map(name -> (Predicate<String>) name::equals)
+            .orElseGet(() -> __ -> true);
+        var graphEntries = graphListingService.listGraphs(user)
+            .stream()
+            .filter(catalogEntry -> graphNameFilter.test(catalogEntry.config().graphName()))
+            .toList();
 
         return degreeDistributionApplier.process(graphEntries, includeDegreeDistribution, terminationFlag);
     }
